{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 9,
  "lineage": "24a0711c-6c46-dfd8-24ad-9e2320ce3723",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:603611436292:vpc/vpc-df1108b7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-9eccd7f6",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-397a8952",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-df1108b7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-e35bfd88",
            "owner_id": "603611436292",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:603611436292:loadbalancer/app/terraform-asg-example/d2888a595e02132e",
            "arn_suffix": "app/terraform-asg-example/d2888a595e02132e",
            "dns_name": "terraform-asg-example-2092476384.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:603611436292:loadbalancer/app/terraform-asg-example/d2888a595e02132e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-asg-example",
            "security_groups": [
              "sg-0f4ba9aa6e61eeaf9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-4fc26403"
              },
              {
                "subnet_id": "subnet-663a3b0e"
              },
              {
                "subnet_id": "subnet-9492edee"
              }
            ],
            "subnets": [
              "subnet-4fc26403",
              "subnet-663a3b0e",
              "subnet-9492edee"
            ],
            "vpc_id": "vpc-df1108b7",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:603611436292:listener/app/terraform-asg-example/d2888a595e02132e/7e26e1a454e8ea6a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:603611436292:listener/app/terraform-asg-example/d2888a595e02132e/7e26e1a454e8ea6a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:603611436292:loadbalancer/app/terraform-asg-example/d2888a595e02132e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.example",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:603611436292:targetgroup/terraform-asg-example/fcdd860867767a15",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:603611436292:listener-rule/app/terraform-asg-example/d2888a595e02132e/7e26e1a454e8ea6a/3608c1b02c228a3c",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:603611436292:listener-rule/app/terraform-asg-example/d2888a595e02132e/7e26e1a454e8ea6a/3608c1b02c228a3c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:603611436292:listener/app/terraform-asg-example/d2888a595e02132e/7e26e1a454e8ea6a",
            "priority": 100
          },
          "dependencies": [
            "aws_lb.example",
            "aws_lb_listener.http",
            "aws_lb_target_group.asg",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:603611436292:targetgroup/terraform-asg-example/fcdd860867767a15",
            "arn_suffix": "targetgroup/terraform-asg-example/fcdd860867767a15",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:603611436292:targetgroup/terraform-asg-example/fcdd860867767a15",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-asg-example",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-df1108b7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:603611436292:security-group/sg-0f4ba9aa6e61eeaf9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4ba9aa6e61eeaf9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-alb",
            "name_prefix": null,
            "owner_id": "603611436292",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-df1108b7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:603611436292:security-group/sg-0ce360e693f4b3e1a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ce360e693f4b3e1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": null,
            "owner_id": "603611436292",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-df1108b7"
          }
        }
      ]
    }
  ]
}